# TTC

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
converter/: main.cpp
core/: crypto.cpp  crypto.h  ttc_decrypt.cpp  ttc_decrypt.h  ttc_format.cpp  ttc_format.h
installer/: TheTrueCertsReader.wxs  TrueCertsReader.wxs  license.rtf
reader-win32/: app_controller.cpp  app_controller.h  license_online.cpp  license_online.h  main.cpp  pdf_viewer.cpp  pdf_viewer.h  protection.cpp  protection.h  ui_access.cpp  ui_access.h  ui_common.cpp  ui_common.h  ui_download.cpp  ui_download.h  ui_flow.cpp  ui_flow.h  ui_ids.h  watermark.cpp  watermark.h
reader-win32/resources/: app.rc
server/: .env  .htaccess  bootstrap.php  config.php  index.php  login.php  logout.php
server/admin/: _footer.php  _header.php  _question_form.php  ajax_exam_search.php  ajax_exam_search_enbl.php  ajax_user_search.php  audit.php  code_delete.php  code_edit.php  code_new.php  code_reset.php  dragdrop_image_builder.js  exam_attempts.php  exam_edit.php  exam_edit_enbl.php  exam_new.php  exam_new_enbl.php  exams.php  index.php  media_crop.php  media_delete.php  media_get.php  media_list.php  media_update.php  media_upload.php  question_delete.php  question_edit.php  question_new.php  questions.php  r2_manager.php  rbac_install.php  roles.php  tinymce_media.js  uploads.php  user_edit.php  user_new.php  users.php
server/api/: _cors.php  get_download.php  get_resource.php  quiz_meta.php  validate.php
server/app/Admin/: AdminPage.php
server/app/Controllers/Admin/: AjaxExamSearchController.php  BaseAdminController.php  CodeEditController.php  CodeNewController.php  ExamAttemptsController.php  ExamsController.php  QuestionsController.php  UploadsController.php  UsersController.php
server/app/Http/: Request.php
server/app/Migrations/: Migrator.php
server/app/Pages/Admin/: code_edit_page.php  code_new_page.php
server/app/Repositories/: AccessCodeRepository.php  AttemptRepository.php  ExamRepository.php  MediaRepository.php  QuestionRepository.php  UserRepository.php
server/app/Services/: AccessCodeService.php  AttemptService.php  ExamService.php  MediaService.php  QuestionService.php  ReportingService.php  UserService.php
server/app/Validators/: AccessCodeValidator.php
server/app/Views/admin/: code_edit.php  code_new.php  exam_attempts.php  exams.php  questions.php  uploads.php  users.php
server/lib/: audit.php  auth.php  csrf.php  db.php  enbl_converter.php  env.php  helpers.php  media.php  quiz.php  r2.php  rbac.php  session.php
server/lib/Quiz/: AttemptService.php  DragDropService.php  ExamService.php  ModeSettingsService.php  ReviewService.php  Schema.php
server/migrations/: 2026_03_11_0007_student_portal.php  2026_03_18_0008_access_code_mode_access.php
